Say how to load LWJGL's natives when the backend runs from the module path, because the only message was LWJGL's own advice to set a library path, which is not the cause there: the natives jars are modules nothing requires, so they are never loaded
The backend catches the link error at its first LWJGL call and, when it is a named module, names the fix: the platform's natives jars on the class path, or an --add-modules line built from its own LWJGL requirements. Proved on the module-path rehearsal: the natives on the module path produced the message, and exactly the line it printed made the window render. On the class path the message says what failed and nothing about modules. Decision 128.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>